# rust-messenger

./: .env.example  TODO.md  docker-compose.yml
app/: Cargo.toml  migrate_run.sh
app/cassandra/migrations/: 001_init_keyspace.cql  002_messages.cql  003_message_delivery_state.cql  004_read_receipts.cql  005_messages_by_user.cql  006_unread_counters.cql  007_conversation_previews.cql
app/migrations/: 20260423192446_users.sql  20260423192457_devices.sql  20260423202237_contacts.sql  20260427111646_attachments.sql  20260427111646_rustfs_metadata.sql  20260429182203_user_profiles.sql  20260429182219_conversations.sql  20260429182232_conversation_participants.sql  20260429182241_blocks.sql  20260429182252_conversation_settings.sql
app/src/: checks.rs  config.rs  lib.rs  main.rs
app/src/application/: mod.rs
app/src/application/messaging/: mod.rs
app/src/application/user/: login.rs
app/src/bootstrap/: buckets.rs  checks.rs  migrations.rs  mod.rs
app/src/db/: migrate.rs
app/src/domain/: mod.rs
app/src/handlers/: health.rs
app/src/infrastructure/: mod.rs
app/src/infrastructure/bootstrap/: checks.rs  migrations.rs  mod.rs
app/src/infrastructure/cache/: check.rs
app/src/infrastructure/cassandra/: check.rs  migrate.rs  mod.rs
app/src/infrastructure/postgres/: check.rs  migrate.rs  mod.rs
app/src/infrastructure/s3/: check.rs  create.rs  mod.rs
app/src/interfaces/http/handlers/: health.rs
app/src/routes/: health.rs
app/src/shared/: checks.rs  config.rs  mod.rs
app/src/startup_checks/: cassandra.rs  migrations.rs  mod.rs  postgres.rs
(+15 files in other folders)
