[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "normalize-path"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }  # For async SQL
# diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }  # Typed ORM alt
config = { version = "0.15", default-features = false, features = ["toml"] }
